[package]
name = "banjo-keyring"
version = "0.1.0-dev"
authors = ["Amber Bertucci <amber@akarys.me>"]
edition = "2018"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
clap = {version = "~2.27.0", features = ["yaml"]}
simplelog = "0.10"
log = "0.4"
byteorder = "1.4"
itertools = "0.10"
rand = "0.5"

[features]
enable_debug = []
